[workspace]
resolver = "2"
members = [
    "application-core",
    "application-beans",
    "application-context",
    "application-web",
    "application-web-macros",
    "application-boot",
    "application-web-actuator",
    "application-schedule",
    "application-cache",
    "application-logger",
    "database-common",
    "database-mysql-seaorm",
]
default-members = ["application-*", "database-*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
repository = "git@github.com:caijh/application-rs.git"

[workspace.dependencies]
state = "0.6.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
config = "0.15.11"
lazy_static = "1.5.0"
async-trait = "0.1.84"
tokio = { version = "1.42.0", features = ["full"] }
clap = { version = "4.5.23", features = ["derive", "cargo"] }
consulrs = "0.1.0"
tracing = "0.1.41"
tracing-core = "0.1.33"
tracing-log = "0.2.0"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
hostname = "0.4.0"
dotenvy = "0.15.7"
async-std = "1.13.0"
tempfile = "3.15.0"
axum = "0.8.8"
axum-server = "0.8.0"
askama = { version = "0.15.1" }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.2", features = ["timeout", "trace"] }
tower-service = "0.3.3"
inventory = "0.3.16"
chrono-tz = "0.10.0"
