[package]
name = "application-boot"
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
application-core = { path = "../application-core" }
application-beans = { path = "../application-beans" }
application-context = { path = "../application-context" }
application-web = { path = "../application-web" }
application-web-actuator = {path = "../application-web-actuator"}
application-logger = { path = "../application-logger" }

serde = { workspace = true }
config = { workspace = true }
lazy_static = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
consulrs = { workspace = true }
# log
tracing = { workspace = true }


util = { git = "https://caijh@bitbucket.org/bytebinary/util-rs.git" }
dotenvy = { workspace = true }
hostname = { workspace = true }

async-std = { workspace = true }
tempfile = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
state = { workspace = true }
[dev-dependencies]

